# secure-server

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  client.pk  client.sk  flake.nix  server.pk  server.sk
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: encryption.rs  key_exchange.rs  lib.rs  sign.rs
key-manager/: Cargo.toml
key-manager/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
