[package]
name = "secure-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
openssl = "0.10.63"
rand = "0.8.5"
x25519-dalek = "2.0.0"

[dependencies.pqcrypto]
version = "0.17.0"
default-features = false
features = ["pqcrypto-kyber", "pqcrypto-sphincsplus"]
