[package]
name = "secure-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = "0.4.31"
secure-common = { path = "../common" }

[[bin]]
name = "server"
path = "src/main.rs"
